added conclusion & make presentation

--- a/Dipl/text/dipl.tex
+++ b/Dipl/text/dipl.tex
@@ -276,7 +276,7 @@ $x_k=x_{k_1}=...=x_{k_i}, k,k_1,...,k_i \in \{1,2,...,n\}$.
 p_{ij}=p\left(A_{ij}\right)=p\left(x^{*} \in (x_{(i)}, x_{(j)})\right) \approx
 \gamma_i + \gamma_{i+1} + ... + \gamma_{j-1} + {{j-i}\over{n+1}},
 \end{equation}
-\[\gamma_{l} = \gamma \left(x_{(l)}\right) = {{t(x_{(k)})-1}\over{n+1}},\]
+\[\gamma_{l} = \gamma \left(x_{(l)}\right) = {{t(x_{(l)})-1}\over{n+1}},\]
 де $x^{*}$ вибіркове значення із генеральної сукупності $G$ , що не
 залежить від вибірки $x$.\par
 
@@ -534,6 +534,27 @@ gorilla & - & - & - & - & - & - \\ \hline
 застосування при довжині вибірки $ > 10^4$, або прискорення самого алгоритму.
 Через це, методи порівняння геномних послідовностей, які були тут розглянуті
 можуть мати практичне значення лише для відносно коротких послідовностей ДНК.
+\par
+
+Також варто проаналізувати отримані міри близькості між геномними
+послідовностями і загальноприйнятими уявленнями про міжвидову близькість.
+Методи чисельного представлення ДНК у комбінації з $p$-статистикою дають
+здебільшого суперечливі результати, якщо припускати, що міра близькості між
+генами видів має відображати близькість видів при науковій класифікації.
+\par
+
+Зокрема, логічно припусти, що до людини найближче має були горила, в той час,
+як всі запропоновані методи з цим не погоджуються. Аналогічно жоден з методів
+не погоджується з тим, що до горили найближче має бути людина. При цьому
+більшість з методів сходяться на думці, що джунглеві кури близькі до горили,
+ближче ніж до качки, хоча вони з одного класу.
+
+\par
+Дані результати можуть говорити або про те, що наші уявлення про зв’язок між
+видовою збіжністю і геномними послідовностями неправильний, або що вибрані
+методи порівняння послідовностей ДНК не мають практичного застосування, або
+неправильно були вибрані послідовності ДНК і можливо перед порівнянням,
+потрібно робити ще якусь попередню обробку ДНК.
 
 
 \newpage
