--- a/Dipl/text/results.tex
+++ b/Dipl/text/results.tex
@@ -1,56 +1,127 @@
-1
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.008998840827283265,0.008998840827283265,0.0045045045045045045,0.013645699875948183,0.018109531653549713
-rat,-,-,0.008690778486948962,0.006331293778897533,0.007973944294699012,0.008795949347629754
-rabbit,-,-,-,0.006188090499393773,0.009962011948109266,0.01100094156530428
-human,-,-,-,-,0.005952380952380952,0.004414788339962721
-duck,-,-,-,-,-,0.017543859649122806
-gorilla,-,-,-,-,-,-
-2
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.03221279970715637,0.03896447237305025,0.01770280438451996,0.07635287657861022,0.09231692188802798
-rat,-,-,0.30298690702231984,0.07789030704061574,0.06677661133966993,0.05957562306642839
-rabbit,-,-,-,0.059154027406034815,0.09385886098895037,0.08013153090832228
-human,-,-,-,-,0.035643353667186836,0.03172258411636979
-duck,-,-,-,-,-,0.723259064968006
-gorilla,-,-,-,-,-,-
-3
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.018390510325994196,0.018390510325994196,0.009216589861751152,0.027521761392729136,0.04045058883768561
-rat,-,-,0.03392735288660799,0.010036380848592926,0.020449379335986683,0.018202146223211393
-rabbit,-,-,-,0.010503045568752496,0.020449379335986683,0.018202146223211393
-human,-,-,-,-,0.008205102204645896,0.0091219710980847
-duck,-,-,-,-,-,0.03174404146160517
-gorilla,-,-,-,-,-,-
-4
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.20653610721330812,0.2012181481707441,0.18472535741158766,0.2825737701584203,0.32460903341264513
-rat,-,-,0.1543751286802553,0.12880921398709821,0.22095923771693385,0.2054197651851425
-rabbit,-,-,-,0.12979891565438198,0.2198026512822938,0.21225572145039487
-human,-,-,-,-,0.16494656452451883,0.16270584731269577
-duck,-,-,-,-,-,0.22192357948540573
-gorilla,-,-,-,-,-,-
-5
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.008998840827283265,0.009019177190734752,0.0045045045045045045,0.01366603623939967,0.01821121347080715
-rat,-,-,0.008767796002714677,0.006351781610786566,0.00800546964896518,0.008819968870698103
-rabbit,-,-,-,0.0062018163932926135,0.009997477971658706,0.011008147422224784
-human,-,-,-,-,0.005946469948456046,0.0044604254337925866
-duck,-,-,-,-,-,0.017587094790645838
-gorilla,-,-,-,-,-,-
-6
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.4182884916519228,0.4678787139283753,0.18442031195981534,0.3520936286173306,0.46492994122790965
-rat,-,-,0.995000724422178,0.3445051081148426,0.5063503885499914,0.4353371078629615
-rabbit,-,-,-,0.371622476913809,0.5287530934253873,0.6094445086371252
-human,-,-,-,-,0.8111966236345581,0.3886802626764496
-duck,-,-,-,-,-,0.49541423536888324
-gorilla,-,-,-,-,-,-
-7
--,gallus,rat,rabbit,human,duck,gorilla
-gallus,-,0.598031440017896,0.5698554084558599,0.9071339962987819,0.8885668964675737,0.9481829459256096
-rat,-,-,0.997779455387032,0.5604684515075168,0.39722931542693213,0.4013302011875252
-rabbit,-,-,-,0.4224342110279932,0.3800282940054539,0.37859812455563885
-human,-,-,-,-,0.5981285761573746,0.7745263350050922
-duck,-,-,-,-,-,0.9520161987663573
-gorilla,-,-,-,-,-,-
+\begin{frame}
+\frametitle{Результати}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.009 & 0.009 & 0.0045 & 0.01365 & 0.01811 \\ \hline
+rat & - & - & 0.00869 & 0.00633 & 0.00797 & 0.0088 \\ \hline
+rabbit & - & - & - & 0.00619 & 0.00996 & 0.011 \\ \hline
+human & - & - & - & - & 0.00595 & 0.00441 \\ \hline
+duck & - & - & - & - & - & 0.01754 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 1.0
+\label{table:res1}
+\end{table}
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.03221 & 0.03896 & 0.0177 & 0.07635 & 0.09232 \\ \hline
+rat & - & - & 0.30299 & 0.07789 & 0.06678 & 0.05958 \\ \hline
+rabbit & - & - & - & 0.05915 & 0.09386 & 0.08013 \\ \hline
+human & - & - & - & - & 0.03564 & 0.03172 \\ \hline
+duck & - & - & - & - & - & 0.72326 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 2.0
+\label{table:res2}
+\end{table}
+
+\newpage
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.01839 & 0.01839 & 0.00922 & 0.02752 & 0.04045 \\ \hline
+rat & - & - & 0.03393 & 0.01004 & 0.02045 & 0.0182 \\ \hline
+rabbit & - & - & - & 0.0105 & 0.02045 & 0.0182 \\ \hline
+human & - & - & - & - & 0.00821 & 0.00912 \\ \hline
+duck & - & - & - & - & - & 0.03174 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 3.0
+\label{table:res3}
+\end{table}
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.20654 & 0.20122 & 0.18473 & 0.28257 & 0.32461 \\ \hline
+rat & - & - & 0.15438 & 0.12881 & 0.22096 & 0.20542 \\ \hline
+rabbit & - & - & - & 0.1298 & 0.2198 & 0.21226 \\ \hline
+human & - & - & - & - & 0.16495 & 0.16271 \\ \hline
+duck & - & - & - & - & - & 0.22192 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 4.0
+\label{table:res4}
+\end{table}
+
+\newpage
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.009 & 0.00902 & 0.0045 & 0.01367 & 0.01821 \\ \hline
+rat & - & - & 0.00877 & 0.00635 & 0.00801 & 0.00882 \\ \hline
+rabbit & - & - & - & 0.0062 & 0.01 & 0.01101 \\ \hline
+human & - & - & - & - & 0.00595 & 0.00446 \\ \hline
+duck & - & - & - & - & - & 0.01759 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 5.0
+\label{table:res5}
+\end{table}
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.41829 & 0.46788 & 0.18442 & 0.35209 & 0.46493 \\ \hline
+rat & - & - & 0.995 & 0.34451 & 0.50635 & 0.43534 \\ \hline
+rabbit & - & - & - & 0.37162 & 0.52875 & 0.60944 \\ \hline
+human & - & - & - & - & 0.8112 & 0.38868 \\ \hline
+duck & - & - & - & - & - & 0.49541 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 6.0
+\label{table:res6}
+\end{table}
+
+\newpage
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+- & gallus & rat & rabbit & human & duck & gorilla \\ \hline
+gallus & - & 0.59803 & 0.56986 & 0.90713 & 0.88857 & 0.94818 \\ \hline
+rat & - & - & 0.99778 & 0.56047 & 0.39723 & 0.40133 \\ \hline
+rabbit & - & - & - & 0.42243 & 0.38003 & 0.3786 \\ \hline
+human & - & - & - & - & 0.59813 & 0.77453 \\ \hline
+duck & - & - & - & - & - & 0.95202 \\ \hline
+gorilla & - & - & - & - & - & - \\ \hline
+\end{tabular}
+\end{center}
+\caption{$p$-статистики при представленні ДНК методом 7.0
+\label{table:res7}
+\end{table}
+\end{frame}
