minor changes and edits
Add argumentation for using modified p-stats and Petunin ellipsoids.

--- a/Dipl/text/pres.tex
+++ b/Dipl/text/pres.tex
@@ -11,10 +11,10 @@
 \begin{frame}
  \frametitle{Метод 1}
 Нуклеотидам A, G, C і T ставляться у відповідність вектори: A $(1,0.8)$, G $(1,0.6)$, C $(1,0.4)$, T $(1,0.2)$.
-Послідовність отримуємо, сумуючи вектори, що відповідають нуклеотидам з послідовності.
+Послідовність отримуємо, сумуючи вектори, що відповідають нуклеотидам з послідовності. Результуюча послідовність двовимірна.
 \begin{figure}
 \begin{center}
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=0.78]
 \begin{axis}[xmin=0,ymin=0]
 \addplot[color=red,mark=x] coordinates {
 (0,0)
@@ -56,6 +56,8 @@ after end axis/.code={
 Спочатку використаємо попередній метод щоб отримати числову послідовність $(x_i,y_i)$. Далі використаємо наступну формулу для обчислення результуючої послідовності:
 \[{x_i-\overrightarrow{y_i} \over{{1\over2}n(n+1)-y_n}},\]
 де $\overrightarrow{y_i}$ це $y$-компонента вектора, що відповідає $i$-тому нуклеотиду при використанні методу 1, $n$ це розмір ДНК послідовності.
+\par
+Результуюча послідовність одновимірна.
 \end{frame}
 
 \begin{frame}
@@ -63,10 +65,11 @@ after end axis/.code={
 Нуклеотидам A, G, C, T ставимо у відповідність вектори $(-1,0)$, $(1,0)$,
 $(0,1)$, $(0,-1)$. Починаємо з точки $(0,0)$ і рухаємось по відповіднім
 векторам. Точки через які ми проходимо утворюють послідовність, причому точка
-стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили.
+стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили. \par
+Результуюча послідовність двовимірна.
 \begin{figure}[h!]
 \centering
-\includegraphics[width=0.65\textwidth]{meth3}
+\includegraphics[width=0.58\textwidth]{meth3}
 \caption{Графічне представлення послідовності ATGCTGCTGA}
 \end{figure}
 \end{frame}
@@ -81,6 +84,8 @@ G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності
 \[p_i = p_{i-1}-0.5(p_{i-1}-g_i)\]
 \[i=1,...,n; p_0=(0.5,0.5),\]
 де $g_i$ - координати, що відповідають $i$-тому нуклеотиду, $n$ - довжина послідовності ДНК.
+\par
+Результуюча послідовність двовимірна.
 \end{frame}
 
 \begin{frame}
@@ -125,14 +130,23 @@ after end axis/.code={
 \end{frame}
 
 \begin{frame}
-\frametitle{Метод 5,6}
+\frametitle{Метод 5}
 
-Використовуємо попередній метод, щоб отримати послідовність $p_i$, отримуємо результуючу, як суму всіх попередніх:
+Використовуємо попередній метод, щоб отримати послідовність $p_i$. Отримуємо результуючу, як суму всіх попередніх:
 \[z_i = \sum_{j=1}^{i} p_i\]
+Результуюча послідовність двовимірна.
+\par
+\end{frame}
+
+\begin{frame}
+\frametitle{Метод 6}
 
 Отримуємо за допомогою методу 4 послідовність $p_i$ і, щоб отримати результуючу послідовність, кожній точці ставимо у відповідність число:
 \[z_i = x_i + y_i,\]
 де $p_i = (x_i,y_i)$.
+\par
+Результуюча послідовність одновимірна.
+
 \end{frame}
 
 \begin{frame}
@@ -140,6 +154,7 @@ after end axis/.code={
 Нуклеотидам A,C ставимо у відповідність $-1$, а нуклеотидам T,G ставимо у відповідність $1$. Починаючи з точки $0$ рухаємось ітеративно:
 \[p_i = p_{i-1} - {(g_i-p_{i-1}) \over{2}}sign(g_i)\]
 де $g_i$ число яке відвідає $i$-тому нуклеотиду. Тобто ми, подібно до методу 4, рухаємося на пів відстань до числа яке відповідає $i$-тому нуклеотиду.
+Результуюча послідовність одновимірна.
 
 \begin{figure}[h!]
 \centering
