--- a/Dipl/text/dipl.tex
+++ b/Dipl/text/dipl.tex
@@ -192,18 +192,25 @@ $-1$.
 \paragraph{Метод 1}
 Кожному нуклеотиду A, G, C, T ставимо у відповідність вектори $(1,0.8)$,
 $(1,0.6)$, $(1,0.4)$, $(1,0.2)$. Починаючи з точки $(0,0)$ рухаємось у напрямку
-векторів. Точки через які ми проходимо утворюють послідовність.
+векторів. Точки через які ми проходимо утворюють двовимірну послідовність.
+Всі елементи послідовності різні.
+Для побудови $p$-статистик використовуємо еліпси Петуніна.
 \paragraph{Метод 2}
 Спочатку використаємо попередній метод щоб отримати числову послідовність
 $(x_i,y_i)$. Далі використаємо наступну формулу для обчислення результуючої
 послідовності:
 \[{x_i-\overrightarrow{y_i} \over{{1\over2}n(n+1)-y_n}},\]
 де $\overrightarrow{y_i}$ це $y$-компонента вектора, що відповідає $i$-тому нуклеотиду при використанні методу 1, $n$ це розмір ДНК послідовності.
+Отримуємо одновимірну послідовність, елементи якої можуть повторюватися, тому
+застосовуємо модифіковані $p$-статистики.
 \paragraph{Метод 3}
 Нуклеотидам A, G, C, T ставимо у відповідність вектори $(-1,0)$, $(1,0)$,
 $(0,1)$, $(0,-1)$. Починаємо з точки $(0,0)$ і рухаємось по відповіднім
 векторам. Точки через які ми проходимо утворюють послідовність, причому точка
 стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили.
+Таким чином кожна точка може зустрічатися більше одного разу.
+Через що, необхідно застосовувати модифіковані $p$-статистики разом з еліпсами
+Петуніна.
 \paragraph{Метод 4}
 Розташовуємо нуклеотиди у вершинах квадрата зі стороною 1: A=$(0,0)$,
 G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно,
@@ -212,18 +219,26 @@ G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності
 можна задати наступним чином:
 \[p_i = p_{i-1}-0.5(p_{i-1}-g_i)\]
 \[i=1,...,n; p_0=(0.5,0.5),\]
-де $g_i$ - координати, що відповідають $i$-тому нуклеотиду, $n$ - довжина послідовності ДНК.
+де $g_i$ - координати, що відповідають $i$-тому нуклеотиду, $n$ - довжина послідовності ДНК. Тут, аналогічно до попереднього методу, можуть виникнути елементи,
+які зустрічаються більше одного разу, і тому необхідно використати модифіковані $p$-статистики. Послідовність двовимірна, тому потрібно використати еліпси
+Петуніна.
 \paragraph{Метод 5}
 Використовуємо попередній метод, щоб отримати послідовність $p_i$, отримуємо результуючу, як суму всіх попередніх:
 \[z_i = \sum_{j=1}^{i} p_i\]
+Отримуємо двовимірну послідовність, і оскільки всі $p_i$ додатні, то елементи не
+повторюються, через це, при побудові $p$-статистик використовуємо еліпси Петуніна.
 \paragraph{Метод 6}
 Отримуємо за допомогою методу 4 послідовність $p_i$ і, щоб отримати результуючу послідовність, кожній точці ставимо у відповідність число:
 \[z_i = x_i + y_i,\]
 де $p_i = (x_i,y_i)$.
+Тут послідовність одномивірна, але може мати повторення, тому застосовуємо
+модифіковані $p$-статистики.
 \paragraph{Метод 7}
 Нуклеотидам A,C ставимо у відповідність $-1$, а нуклеотидам T,G ставимо у відповідність $1$. Починаючи з точки $0$ рухаємось ітеративно:
 \[p_i = p_{i-1} - {(g_i-p_{i-1}) \over{2}}sign(g_i)\]
 де $g_i$ число яке відвідає $i$-тому нуклеотиду. Тобто ми, подібно до методу 4, рухаємося на пів відстань до числа яке відповідає $i$-тому нуклеотиду.
+Отримуємо одновимірну послідовність, яка може мати повторення, тому застосовуємо
+модифіковані $p$-статистики.
 
 \subsection{$p$-статистики}
 
